--- a/web/public/index.html
+++ b/web/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      {% load static %}
+      <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
     <title>HelloWWW</title>
   </head>
   <body>
@@ -39,6 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="/static/main.js"></script>
+    <script type="text/javascript" src="{% static 'js/main.js' %}" ></script>
   </body>
 </html>
