--- a/web/public/dist-index.html
+++ b/web/public/dist-index.html
@@ -24,8 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <!-- {% load static %} -->
-      <!-- <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
+      {% load static %}
+      <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <title>HelloWWW</title>
   </head>
@@ -42,6 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- <script type="text/javascript" src="{% static 'js/main.js' %}" ></script> -->
+    <script type="text/javascript" src="{% static 'js/main.js' %}" ></script>
   </body>
 </html>
